[package]
name = "fs2"
version = "0.2.3"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/danburkert/fs2-rs"
documentation = "https://danburkert.github.io/fs2-rs/fs2/index.html"
description = "Cross-platform file locks and file duplication."
keywords = ["file", "file-system", "lock", "duplicate", "flock"]

[dependencies]
libc = "0.2.2"
winapi = "0.2"
kernel32-sys = "0.2"

[dev-dependencies]
tempdir = "0.3"
