[package]
name = "fs2"
version = "0.4.1"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/danburkert/fs2-rs"
documentation = "https://docs.rs/fs2"
description = "Cross-platform file locks and file duplication."
keywords = ["file", "file-system", "lock", "duplicate", "flock"]

[target.'cfg(unix)'.dependencies]
libc = "0.2.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"

[dev-dependencies]
tempdir = "0.3"
